--- a/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -28,8 +28,8 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-rK-1Uh" userLabel="Parent Stack View">
-                    <rect key="frame" x="16" y="75" width="361" height="388"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-rK-1Uh" userLabel="Parent Stack View">
+                    <rect key="frame" x="16" y="75" width="361" height="404"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oyL-Uy-ixi" userLabel="Round Stack View">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="72"/>
@@ -107,7 +107,7 @@
                             </variation>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Cgi-H2-0oH" userLabel="Teams Stack View">
-                            <rect key="frame" x="0.0" y="104" width="361" height="284"/>
+                            <rect key="frame" x="0.0" y="120" width="361" height="284"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="FkI-kR-hVj">
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="44"/>
@@ -188,7 +188,7 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <variation key="heightClass=compact" alignment="top" axis="horizontal" distribution="fillEqually"/>
+                    <variation key="heightClass=compact" alignment="top" axis="horizontal" distribution="fillEqually" spacing="32"/>
                     <variation key="heightClass=regular-widthClass=compact" distribution="equalCentering"/>
                     <variation key="heightClass=regular-widthClass=regular" axis="vertical" distribution="equalCentering"/>
                 </stackView>
@@ -275,9 +275,9 @@
                     <exclude reference="G9z-qA-WZc"/>
                     <exclude reference="Ual-Pi-AhW"/>
                     <exclude reference="sBl-Wp-LA7"/>
+                    <exclude reference="10Z-cV-V6v"/>
                     <exclude reference="66G-av-Tm1"/>
                     <exclude reference="W0O-OU-atF"/>
-                    <exclude reference="10Z-cV-V6v"/>
                 </mask>
             </variation>
             <variation key="heightClass=compact">
