--- a/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,16 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController" customModule="Gamoitsani" customModuleProvider="target">
             <connections>
                 <outlet property="mainView" destination="DOp-si-W3S" id="dVn-xl-nw5"/>
+                <outlet property="mainViewHeightConstraint" destination="1tK-pM-LM6" id="b84-mS-hBN"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Ear-na-QPK"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DOp-si-W3S">
-                    <rect key="frame" x="36" y="226" width="321" height="400"/>
+                    <rect key="frame" x="36" y="266" width="358" height="400"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="400" id="1tK-pM-LM6"/>
@@ -48,11 +49,11 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="DOp-si-W3S" secondAttribute="bottom" constant="36" id="2Cb-6X-fuD"/>
+                <constraint firstAttribute="bottom" secondItem="DOp-si-W3S" secondAttribute="bottom" constant="24" id="2Cb-6X-fuD"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="7Ay-7f-xyV"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="36" id="D7U-Q9-5ww"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iTJ-Ze-Dsv"/>
-                <constraint firstItem="DOp-si-W3S" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lIo-yc-pEW"/>
+                <constraint firstItem="DOp-si-W3S" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="12" id="lIo-yc-pEW"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DOp-si-W3S" secondAttribute="trailing" constant="36" id="seW-fd-Oj0"/>
             </constraints>
             <variation key="default">
