--- a/Gamoitsani/Source/Modules/AddWord/Xib/AddWordViewController.xib
+++ b/Gamoitsani/Source/Modules/AddWord/Xib/AddWordViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddWordViewController" customModule="Gamoitsani" customModuleProvider="target">
             <connections>
                 <outlet property="addWordButton" destination="PPa-g6-T7h" id="Fjs-he-3km"/>
+                <outlet property="bannerView" destination="1dT-TE-wbG" id="vXU-bu-2Zc"/>
                 <outlet property="hintMessageLabel" destination="MSQ-Hd-OHb" id="eFF-9D-Rw1"/>
                 <outlet property="view" destination="iN0-l3-epB" id="9Sv-YA-Q7b"/>
                 <outlet property="wordTextField" destination="wGZ-bI-w9G" id="Thy-5S-EUv"/>
@@ -52,13 +53,23 @@
                         </button>
                     </subviews>
                 </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1dT-TE-wbG" customClass="GADBannerView">
+                    <rect key="frame" x="36.666666666666657" y="752" width="320" height="50"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="PCd-GL-miR"/>
+                        <constraint firstAttribute="height" constant="50" id="dzS-Jo-tIt"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="dG3-5a-FEu" secondAttribute="trailing" constant="16" id="7CR-Xm-tmT"/>
+                <constraint firstItem="1dT-TE-wbG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="R7u-qV-gnG"/>
                 <constraint firstItem="dG3-5a-FEu" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Wta-zi-Mdw"/>
                 <constraint firstItem="dG3-5a-FEu" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="24" id="fJx-qJ-hag"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1dT-TE-wbG" secondAttribute="bottom" constant="16" id="iix-Na-8dU"/>
                 <constraint firstItem="dG3-5a-FEu" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="wnQ-WJ-MhI"/>
             </constraints>
             <point key="canvasLocation" x="132" y="20"/>
