--- a/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameDetailsViewController" customModule="Gamoitsani" customModuleProvider="target">
             <connections>
                 <outlet property="addTeamButton" destination="p7k-Fq-4XT" id="C8Z-fU-p4B"/>
+                <outlet property="bannerView" destination="lWZ-LP-aFg" id="fbG-xF-KEz"/>
                 <outlet property="roundsAmountTitle" destination="IDo-rL-6Pp" id="QJm-OA-8EU"/>
                 <outlet property="roundsLengthStepper" destination="Hyz-q6-1wl" id="eWE-K9-U89"/>
                 <outlet property="roundsLengthTitle" destination="NeN-mg-aP4" id="wcn-B7-wMA"/>
@@ -25,26 +26,26 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-rK-1Uh" userLabel="Parent Stack View">
-                    <rect key="frame" x="16" y="75" width="361" height="404"/>
+                    <rect key="frame" x="75" y="12" width="702" height="218"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oyL-Uy-ixi" userLabel="Round Stack View">
-                            <rect key="frame" x="0.0" y="0.0" width="361" height="72"/>
+                            <rect key="frame" x="0.0" y="0.0" width="335" height="98"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5Le-4V-IFZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="რაუნდების რაოდენობა: 0" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDo-rL-6Pp" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="5.9999999999999982" width="259" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="12.333333333333334" width="233" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ov7-uJ-vUY">
-                                            <rect key="frame" x="267" y="0.0" width="94" height="32"/>
+                                            <rect key="frame" x="241" y="6.6666666666666679" width="94" height="32"/>
                                             <connections>
                                                 <action selector="roundsStepperAction:" destination="-1" eventType="valueChanged" id="NxS-hK-25p"/>
                                             </connections>
@@ -70,16 +71,16 @@
                                     </variation>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nUu-lF-qRS">
-                                    <rect key="frame" x="0.0" y="40" width="361" height="32"/>
+                                    <rect key="frame" x="0.0" y="53" width="335" height="45"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="რაუნდის ხანგრძლივობა: 0" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NeN-mg-aP4" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="5.9999999999999982" width="259" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="12.333333333333327" width="233" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Hyz-q6-1wl">
-                                            <rect key="frame" x="267" y="0.0" width="94" height="32"/>
+                                            <rect key="frame" x="241" y="6.6666666666666714" width="94" height="32"/>
                                             <connections>
                                                 <action selector="roundsLengthStepperAction:" destination="-1" eventType="valueChanged" id="fIZ-Go-U5S"/>
                                             </connections>
@@ -107,19 +108,19 @@
                             </variation>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Cgi-H2-0oH" userLabel="Teams Stack View">
-                            <rect key="frame" x="0.0" y="120" width="361" height="284"/>
+                            <rect key="frame" x="367" y="0.0" width="335" height="218"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="FkI-kR-hVj">
-                                    <rect key="frame" x="0.0" y="0.0" width="361" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="გუნდები" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ue6-uc-CpB" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="11.999999999999998" width="249" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="11.999999999999998" width="68.333333333333329" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p7k-Fq-4XT">
-                                            <rect key="frame" x="261" y="0.0" width="100" height="44"/>
+                                            <rect key="frame" x="235" y="0.0" width="100" height="44"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="2V5-hu-7cm"/>
                                                 <constraint firstAttribute="width" constant="175" id="W5k-ra-T29"/>
@@ -162,7 +163,7 @@
                                     <variation key="heightClass=compact" distribution="equalCentering"/>
                                 </stackView>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2u9-PL-yjX" customClass="GMTableView" customModule="Gamoitsani" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="62" width="361" height="222"/>
+                                    <rect key="frame" x="0.0" y="62" width="335" height="156"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="WwX-Nd-kbG"/>
@@ -193,7 +194,7 @@
                     <variation key="heightClass=regular-widthClass=regular" axis="vertical" distribution="equalCentering"/>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cz4-px-Xcr" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
-                    <rect key="frame" x="16" y="710" width="361" height="44"/>
+                    <rect key="frame" x="75" y="246" width="702" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="jlb-4x-G2A"/>
                         <constraint firstAttribute="height" constant="60" id="nNp-w5-kmw"/>
@@ -225,11 +226,20 @@
                         <action selector="startGameAction:" destination="-1" eventType="touchUpInside" id="lVr-P4-Ums"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lWZ-LP-aFg" customClass="GADBannerView">
+                    <rect key="frame" x="266" y="306" width="320" height="50"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="JI8-OB-jox"/>
+                        <constraint firstAttribute="height" constant="50" id="jSf-q9-w4f"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="cz4-px-Xcr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ycw-rK-1Uh" secondAttribute="bottom" constant="48" id="10Z-cV-V6v"/>
+                <constraint firstItem="lWZ-LP-aFg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3JB-aj-yIh"/>
                 <constraint firstItem="cz4-px-Xcr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ycw-rK-1Uh" secondAttribute="bottom" constant="32" id="66G-av-Tm1"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EiG-mV-mWG"/>
                 <constraint firstItem="cz4-px-Xcr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="G9z-qA-WZc"/>
@@ -243,11 +253,11 @@
                 <constraint firstAttribute="trailing" secondItem="ycw-rK-1Uh" secondAttribute="trailing" constant="16" id="dwS-Yi-IQL"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fla-Ln-ihQ"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="gCD-Mg-t8R"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="cz4-px-Xcr" secondAttribute="bottom" constant="16" id="hDA-Zy-gSZ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="cz4-px-Xcr" secondAttribute="bottom" constant="64" id="iGS-0X-LNm"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="12" id="imD-Yi-ch1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ycw-rK-1Uh" secondAttribute="trailing" constant="16" id="mQh-Vo-CUu"/>
+                <constraint firstItem="lWZ-LP-aFg" firstAttribute="top" secondItem="cz4-px-Xcr" secondAttribute="bottom" constant="16" id="oXJ-sh-kxH"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="48" id="r07-BT-N7T"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="lWZ-LP-aFg" secondAttribute="bottom" constant="16" id="r9w-Cn-YCk"/>
                 <constraint firstItem="cz4-px-Xcr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="sBl-Wp-LA7"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cz4-px-Xcr" secondAttribute="trailing" constant="16" id="sUg-Mq-gaO"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cz4-px-Xcr" secondAttribute="trailing" constant="16" id="tbF-y4-PXV"/>
@@ -256,13 +266,11 @@
             </constraints>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="OvH-Y0-ukw"/>
                     <exclude reference="sUg-Mq-gaO"/>
                     <exclude reference="tbF-y4-PXV"/>
                     <exclude reference="yyg-0h-AKh"/>
+                    <exclude reference="OvH-Y0-ukw"/>
                     <exclude reference="Wfs-qp-p7a"/>
-                    <exclude reference="hDA-Zy-gSZ"/>
-                    <exclude reference="iGS-0X-LNm"/>
                     <exclude reference="EiG-mV-mWG"/>
                     <exclude reference="fla-Ln-ihQ"/>
                     <exclude reference="xGH-fi-Kkc"/>
@@ -282,9 +290,8 @@
             </variation>
             <variation key="heightClass=compact">
                 <mask key="constraints">
-                    <include reference="OvH-Y0-ukw"/>
                     <include reference="yyg-0h-AKh"/>
-                    <include reference="hDA-Zy-gSZ"/>
+                    <include reference="OvH-Y0-ukw"/>
                     <include reference="EiG-mV-mWG"/>
                     <include reference="ZBP-oH-hjk"/>
                     <include reference="imD-Yi-ch1"/>
@@ -295,7 +302,6 @@
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="constraints">
                     <include reference="sUg-Mq-gaO"/>
-                    <include reference="iGS-0X-LNm"/>
                     <include reference="xGH-fi-Kkc"/>
                     <include reference="dwS-Yi-IQL"/>
                     <include reference="gCD-Mg-t8R"/>
