--- a/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/GameDetails/Xib/GameDetailsViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="landscape" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -26,26 +26,26 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="ycw-rK-1Uh" userLabel="Parent Stack View">
-                    <rect key="frame" x="75" y="12" width="702" height="218"/>
+                    <rect key="frame" x="16" y="75" width="361" height="338"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oyL-Uy-ixi" userLabel="Round Stack View">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="98"/>
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="72"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5Le-4V-IFZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="რაუნდების რაოდენობა: 0" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDo-rL-6Pp" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="12.333333333333334" width="233" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="5.9999999999999982" width="259" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ov7-uJ-vUY">
-                                            <rect key="frame" x="241" y="6.6666666666666679" width="94" height="32"/>
+                                            <rect key="frame" x="267" y="0.0" width="94" height="32"/>
                                             <connections>
                                                 <action selector="roundsStepperAction:" destination="-1" eventType="valueChanged" id="NxS-hK-25p"/>
                                             </connections>
@@ -71,16 +71,16 @@
                                     </variation>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nUu-lF-qRS">
-                                    <rect key="frame" x="0.0" y="53" width="335" height="45"/>
+                                    <rect key="frame" x="0.0" y="40" width="361" height="32"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="რაუნდის ხანგრძლივობა: 0" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NeN-mg-aP4" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="12.333333333333327" width="233" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="5.9999999999999982" width="259" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Hyz-q6-1wl">
-                                            <rect key="frame" x="241" y="6.6666666666666714" width="94" height="32"/>
+                                            <rect key="frame" x="267" y="0.0" width="94" height="32"/>
                                             <connections>
                                                 <action selector="roundsLengthStepperAction:" destination="-1" eventType="valueChanged" id="fIZ-Go-U5S"/>
                                             </connections>
@@ -108,19 +108,19 @@
                             </variation>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Cgi-H2-0oH" userLabel="Teams Stack View">
-                            <rect key="frame" x="367" y="0.0" width="335" height="218"/>
+                            <rect key="frame" x="0.0" y="120" width="361" height="218"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="FkI-kR-hVj">
-                                    <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="44"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="გუნდები" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ue6-uc-CpB" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="11.999999999999998" width="68.333333333333329" height="20.333333333333329"/>
+                                            <rect key="frame" x="0.0" y="11.999999999999998" width="249" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p7k-Fq-4XT">
-                                            <rect key="frame" x="235" y="0.0" width="100" height="44"/>
+                                            <rect key="frame" x="261" y="0.0" width="100" height="44"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="2V5-hu-7cm"/>
                                                 <constraint firstAttribute="width" constant="175" id="W5k-ra-T29"/>
@@ -163,7 +163,7 @@
                                     <variation key="heightClass=compact" distribution="equalCentering"/>
                                 </stackView>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2u9-PL-yjX" customClass="GMTableView" customModule="Gamoitsani" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="62" width="335" height="156"/>
+                                    <rect key="frame" x="0.0" y="62" width="361" height="156"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="WwX-Nd-kbG"/>
@@ -194,7 +194,7 @@
                     <variation key="heightClass=regular-widthClass=regular" axis="vertical" distribution="equalCentering"/>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cz4-px-Xcr" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
-                    <rect key="frame" x="75" y="246" width="702" height="44"/>
+                    <rect key="frame" x="16" y="692" width="361" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="jlb-4x-G2A"/>
                         <constraint firstAttribute="height" constant="60" id="nNp-w5-kmw"/>
@@ -227,7 +227,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lWZ-LP-aFg" customClass="GADBannerView">
-                    <rect key="frame" x="266" y="306" width="320" height="50"/>
+                    <rect key="frame" x="36.666666666666657" y="752" width="320" height="50"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="JI8-OB-jox"/>
@@ -249,6 +249,7 @@
                 <constraint firstItem="cz4-px-Xcr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ycw-rK-1Uh" secondAttribute="bottom" constant="16" id="W0O-OU-atF"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="cz4-px-Xcr" secondAttribute="bottom" constant="100" id="Wfs-qp-p7a"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="ZBP-oH-hjk"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="cz4-px-Xcr" secondAttribute="bottom" priority="999" constant="16" id="a7X-Xv-mdQ"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="dKL-q4-5nP"/>
                 <constraint firstAttribute="trailing" secondItem="ycw-rK-1Uh" secondAttribute="trailing" constant="16" id="dwS-Yi-IQL"/>
                 <constraint firstItem="ycw-rK-1Uh" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fla-Ln-ihQ"/>
