--- a/Gamoitsani/Source/Modules/Rules/Xib/RulesViewController.xib
+++ b/Gamoitsani/Source/Modules/Rules/Xib/RulesViewController.xib
@@ -37,11 +37,12 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="6q2-vX-kiF" secondAttribute="bottom" constant="16" id="Plj-ny-qgC"/>
-                <constraint firstItem="6q2-vX-kiF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cdB-Yv-YrT"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="6q2-vX-kiF" secondAttribute="bottom" constant="16" id="4W6-eO-RFW"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="zgV-fI-Vl3" secondAttribute="bottom" priority="999" constant="16" id="8wm-Fc-cWT"/>
+                <constraint firstItem="6q2-vX-kiF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="93k-BL-5qy"/>
                 <constraint firstItem="zgV-fI-Vl3" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="dwk-ag-ieT"/>
+                <constraint firstItem="6q2-vX-kiF" firstAttribute="top" secondItem="zgV-fI-Vl3" secondAttribute="bottom" constant="16" id="efS-gU-Zyk"/>
                 <constraint firstItem="zgV-fI-Vl3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="gTF-gi-S9T"/>
-                <constraint firstItem="6q2-vX-kiF" firstAttribute="top" secondItem="zgV-fI-Vl3" secondAttribute="bottom" constant="16" id="mCy-Fr-QHt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="zgV-fI-Vl3" secondAttribute="trailing" constant="16" id="qZx-nk-4qd"/>
             </constraints>
             <variation key="default">
