fixed 2 line word bug

--- a/Gamoitsani/Source/Modules/Game/Game/Views/GamePlay/GamePlayView.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Views/GamePlay/GamePlayView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -16,19 +16,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6s-5M-nPD" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                    <rect key="frame" x="16" y="190" width="292" height="20.333333333333343"/>
+                    <rect key="frame" x="75" y="202" width="174" height="20.333333333333343"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDl-jc-QGU" customClass="GMLabel" customModule="Gamoitsani" customModuleProvider="target">
-                    <rect key="frame" x="16" y="48" width="292" height="20.333333333333329"/>
+                    <rect key="frame" x="75" y="24" width="174" height="162"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="fU3-vB-ewf">
-                    <rect key="frame" x="24" y="282" width="276" height="60"/>
+                    <rect key="frame" x="83" y="295" width="158" height="60"/>
                     <subviews>
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrX-rg-zwz" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
@@ -71,7 +71,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tqx-xr-SUN" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
-                            <rect key="frame" x="216" y="0.0" width="60" height="60"/>
+                            <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Tqx-xr-SUN" secondAttribute="height" multiplier="1:1" id="EVB-Zs-PTQ"/>
                                 <constraint firstAttribute="width" secondItem="Tqx-xr-SUN" secondAttribute="height" multiplier="1:1" id="Gx8-qs-pMA"/>
@@ -127,11 +127,11 @@
                 <constraint firstItem="W6s-5M-nPD" firstAttribute="centerX" secondItem="PwO-y8-944" secondAttribute="centerX" id="MMd-dB-aON"/>
                 <constraint firstItem="W6s-5M-nPD" firstAttribute="centerY" secondItem="PwO-y8-944" secondAttribute="centerY" constant="12" id="R89-aO-KzA"/>
                 <constraint firstItem="fU3-vB-ewf" firstAttribute="leading" secondItem="BmO-Bc-73D" secondAttribute="leading" constant="24" id="SWL-MK-ygO"/>
-                <constraint firstItem="VDl-jc-QGU" firstAttribute="top" secondItem="PwO-y8-944" secondAttribute="top" constant="48" id="XH2-kd-qh9"/>
+                <constraint firstItem="VDl-jc-QGU" firstAttribute="top" secondItem="PwO-y8-944" secondAttribute="top" constant="24" id="XH2-kd-qh9"/>
                 <constraint firstItem="VDl-jc-QGU" firstAttribute="top" secondItem="BmO-Bc-73D" secondAttribute="top" constant="72" id="acE-3O-Dml"/>
                 <constraint firstItem="fU3-vB-ewf" firstAttribute="top" relation="greaterThanOrEqual" secondItem="W6s-5M-nPD" secondAttribute="bottom" constant="16" id="afc-s7-I29"/>
                 <constraint firstItem="fU3-vB-ewf" firstAttribute="leading" secondItem="BmO-Bc-73D" secondAttribute="leading" constant="42" id="eai-eM-zb0"/>
-                <constraint firstItem="W6s-5M-nPD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="VDl-jc-QGU" secondAttribute="bottom" constant="16" id="krz-H7-SUN"/>
+                <constraint firstItem="W6s-5M-nPD" firstAttribute="top" secondItem="VDl-jc-QGU" secondAttribute="bottom" constant="16" id="krz-H7-SUN"/>
                 <constraint firstItem="VDl-jc-QGU" firstAttribute="centerX" secondItem="PwO-y8-944" secondAttribute="centerX" id="l2m-xM-7HL"/>
                 <constraint firstItem="BmO-Bc-73D" firstAttribute="trailing" secondItem="VDl-jc-QGU" secondAttribute="trailing" constant="16" id="lM3-rn-xEQ"/>
                 <constraint firstItem="BmO-Bc-73D" firstAttribute="trailing" secondItem="W6s-5M-nPD" secondAttribute="trailing" constant="16" id="q9s-wn-IT7"/>
